[package]
name = "yars_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
tokio = { version = "1.16.1", features = ['full'] }
log = { version = "0.4", features = ["value-bag"] }
env_logger = "0.9.0"
