[package]
name = "yars_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.16.1", features = ['full'] }
log = { version = "0.4", features = ["value-bag"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
jsonwebtoken = "=7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"]}
base64 = "0.13.1"
cli-table = "0.4"